my-apps/development/product-bench/lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab
  labels:
    app: lab
spec:
  selector:
    app: lab
  ports:
    - name: http
      port: 8080
      targetPort: http
